@@ -667,8 +667,19 @@ along with this software (see the LICENSE.md file). If not, see
     </xs:element>
     <xs:element name="component">
         <xs:complexType>
+            <xs:sequence>
+                <xs:element ref="depends-on" minOccurs="0" maxOccurs="unbounded"/>
+            </xs:sequence>
             <xs:attribute name="name" type="xs:string" use="optional"/>
-            <xs:attribute name="location" type="xs:string" use="required"/>
+            <xs:attribute name="location" type="xs:string" use="optional"><xs:annotation><xs:documentation>
+                Required when under component-list (in Moqui Conf XML file or a components.xml file), optional
+                when component element is in a component.xml file within a component.
+            </xs:documentation></xs:annotation></xs:attribute>
+        </xs:complexType>
+    </xs:element>
+    <xs:element name="depends-on">
+        <xs:complexType>
+            <xs:attribute name="name" type="xs:string" use="required"/>
         </xs:complexType>
     </xs:element>
 </xs:schema>
